[package]
name = "jungfrau-ctrl-ioc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
epicars = { path = "./epicars" }
futures-core = "0.3.31"
futures-util = "0.3.31"
regex = "1.11.2"
telnet = "0.2.4"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
